Traefik/k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.local`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: whoami
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.local`)
      kind: Rule
      middlewares:
        - name: secure-headers
      services:
        - name: whoami
          port: 80
  tls: {}
